--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=false
 dgShowFileTree=true
 dgEnableSearch=true
