--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=false
 dgShowLocalGraph=true
-dgShowInlineTitle=false
+dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
