--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=false
 dgShowLocalGraph=false
-dgShowInlineTitle=false
+dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
