--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ STYLE_SETTINGS_CSS=body.css-settings-manager { --floating-toc-position: 0px; --i
 STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized is-hidden-frameless obsidian-app theme-light show-inline-title show-ribbon show-view-header css-settings-manager Heading thino-show-status floating-toc-remove-heading-indicator default-outline-style its-theme sidebar-float-bottom folder-arrow-hidden check-color check-bg hr-center-vertically pathfinder-remaster enable-heading-nowrap enable-edge-style ptm-current-line-highlight-box ptm-dim-table-as-one ptm-dim-unfocused-pause-while-scrolling ptm-dim-unfocused-pause-while-selecting ptm-plugin-activated ptm-typewriter-scroll ptm-announce-updates is-focused
 USE_FULL_RESOLUTION_IMAGES=false
 dgHomeLink=true
-dgPassFrontmatter=true
+dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=true
