--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=false
-dgShowInlineTitle=true
+dgShowInlineTitle=false
 dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
