--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SITE_NAME_HEADER=Digital Garden
-SITE_MAIN_LANGUAGE=en
+SITE_NAME_HEADER=TianShui's Vault
+SITE_MAIN_LANGUAGE=zh-cn
 SITE_BASE_URL=https://luxury-medovik-91d20b.netlify.app/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
