--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SITE_NAME_HEADER=TianShui's Vault
 SITE_MAIN_LANGUAGE=zh-cn
 SITE_BASE_URL=https://luxury-medovik-91d20b.netlify.app/
 SHOW_CREATED_TIMESTAMP=false
-TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+TIMESTAMP_FORMAT=yyyy MMM dd, h:mm a
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
