--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=TianShui's Vault
 SITE_MAIN_LANGUAGE=zh-cn
-SITE_BASE_URL=https://luxury-medovik-91d20b.netlify.app/
+SITE_BASE_URL=https://tsssss77.netlify.app/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=yyyy MMM dd, h:mm a
 SHOW_UPDATED_TIMESTAMP=false
