--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { --floating-toc-position: 0px; --indicator-bar-position: 0em; --floating-toc-highlight-color: #EC8080; --floating-toc-highlight-color-rgb: 0,73.97260273972604%,71.37254901960785%; --hr-icon-font: its; } body.theme-light.css-settings-manager { --floating-toc-line-color: #890000; } body.theme-dark.css-settings-manager { --floating-toc-line-color: #890000; }
-STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-maximized is-hidden-frameless obsidian-app theme-light show-inline-title show-ribbon show-view-header css-settings-manager Heading thino-show-status enable-heading-nowrap enable-edge-style floating-toc-remove-heading-indicator default-outline-style its-theme sidebar-float-bottom folder-arrow-hidden check-color check-bg hr-center-vertically pathfinder-remaster ptm-current-line-highlight-box ptm-dim-table-as-one ptm-dim-unfocused-pause-while-scrolling ptm-dim-unfocused-pause-while-selecting ptm-plugin-activated ptm-typewriter-scroll ptm-announce-updates is-focused
+STYLE_SETTINGS_CSS=
+STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/SlRvb/Obsidian--ITS-Theme/HEAD/theme.css
-BASE_THEME=light
+THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
