--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=yyyy MMM dd, h:mm a
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
-NOTE_ICON_TITLE=false
-NOTE_ICON_FILETREE=false
+NOTE_ICON_TITLE=true
+NOTE_ICON_FILETREE=true
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { --floating-toc-position: 0px; --indicator-bar-position: 0em; --floating-toc-highlight-color: #EC8080; --floating-toc-highlight-color-rgb: 0,73.97260273972604%,71.37254901960785%; --hr-icon-font: its; } body.theme-light.css-settings-manager { --floating-toc-line-color: #890000; } body.theme-dark.css-settings-manager { --floating-toc-line-color: #890000; }
